--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DbPath": "db.json" // will be relative to the executing assembly
 }
