--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbPath": "%HOME%\\db.json" // use %HOME% on App Service
 }
