--- a/ModernWebsite.csproj
+++ b/ModernWebsite.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="WebPush" Version="1.0.12" />
+  </ItemGroup>
+
 </Project>
